[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/DialogEditor/LineGui.gd" type="Script" id=1]

[node name="LineGui" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeechTextEdit" type="TextEdit" parent="."]
margin_right = 718.0
margin_bottom = 640.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.8

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 722.0
margin_right = 1121.0
margin_bottom = 640.0
size_flags_horizontal = 3

[node name="Speaker" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 399.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/Speaker"]
margin_top = 5.0
margin_right = 197.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Speaker:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Speaker"]
margin_left = 201.0
margin_right = 399.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="SpeakerNode" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 399.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/SpeakerNode"]
margin_top = 5.0
margin_right = 197.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Speaker Node:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/SpeakerNode"]
margin_left = 201.0
margin_right = 399.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Animation" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 399.0
margin_bottom = 80.0

[node name="Label" type="Label" parent="VBoxContainer/Animation"]
margin_top = 5.0
margin_right = 197.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Animation:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Animation"]
margin_left = 201.0
margin_right = 399.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="."]
margin_left = 1125.0
margin_right = 1152.0
margin_bottom = 640.0
text = "[x]"

[connection signal="text_changed" from="SpeechTextEdit" to="." method="_on_speech_text_edit_changed"]
[connection signal="text_changed" from="VBoxContainer/Speaker/LineEdit" to="." method="_on_speaker_line_edit_changed"]
[connection signal="text_changed" from="VBoxContainer/SpeakerNode/LineEdit" to="." method="_on_speaker_node_line_edit_changed"]
[connection signal="text_changed" from="VBoxContainer/Animation/LineEdit" to="." method="_on_animation_line_edit_changed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
